add deepseek demo